custom scrollbar, fix bug warning tippy, fixed header

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -6,6 +6,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    background-color: var(--white);
+    z-index: 10;
 }
 
 .inner {
